--- a/package.json
+++ b/package.json
@@ -17,17 +17,24 @@
   "author": "me",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.490.0",
     "@types/es6-promise": "^3.3.0",
+    "aws-sdk": "^2.1537.0",
     "axios": "^1.1.3",
-    "dotenv": "^16.0.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "reflect-metadata": "^0.2.1",
     "uuid": "^9.0.0",
     "zod": "^3.20.2"
-
   },
   "devDependencies": {
-    "tsconfig-paths": "^4.2.0",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.14",
+    "@types/node": "^20.11.3",
     "@types/uuid": "^9.0.0",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
@@ -36,9 +43,9 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "@types/node": "^20.11.3",
     "express": "^4.18.2",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
 }
