--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
         "strict": true /* Enable all strict type-checking options. */,
         "noImplicitAny": true /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
         "strictNullChecks": true /* When type checking, take into account 'null' and 'undefined'. */,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "emitDecoratorMetadata": true     // Enable emitting decorator metadata
     },
     "include": ["./server/**/*"]
 }
