--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "googleapis": "^131.0.0",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.1",
     "uuid": "^9.0.0",
     "zod": "^3.20.2"
@@ -34,7 +36,8 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.14",
-    "@types/node": "^20.11.3",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.5",
     "@types/uuid": "^9.0.0",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
