--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "@tanstack/react-table": "^8.8.5",
         "dayjs": "^1.11.7",
         "jotai-tanstack-query": "^0.8.3",
+        "notistack": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.1",
